Tue Mar  3 17:10:09 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (extmake): removes object files no longer used and
	  files to be removed by old distclean.

Tue Mar  3 16:51:51 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/dl/win32/lib/win32/resolv.rb: get rid of warning.

	* ext/dl/lib/dl/func.rb: ditto.

Tue Mar  3 16:25:43 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (extmake), lib/mkmf.rb (create_makefile): $objs and
	  $srcs are always Array or nil now.

Tue Mar  3 15:54:11 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/dl/win32/lib/win32/{registry,resolv}.rb: use dl/import instead
	  of Win32API.

Tue Mar  3 15:53:20 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/dl/lib/dl/func.rb (DL::Function.name): delegate to @cfunc.

Tue Mar  3 15:40:38 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/dl.c (rb_dl_init_callbacks): autoloads callbacks.

	* ext/dl/callback: split from dl.

	* ext/dl/lib/dl/cparser.rb (DL::CParser::parse_signature): fixed
	  variable name.

	* ext/dl/lib/dl/pack.rb (DL::PackInfo): reduced redundan
	  initialization.

	* ext/dl/lib/dl/stack.rb (DL::Stack): ditto.

	* ext/dl/lib/dl/value.rb (DL::ValueUtil#wrap_arg): NULL for nil.

	* test/dl: moved from ext/dl/test.

Tue Mar  3 14:57:28 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (main): passes $(MAKE) to mkmain_cmd

	* ext/extmk.rb (command_output): uses arguments to invoke make.

Tue Mar  3 01:56:03 2009  Tanaka Akira  <akr@fsij.org>

	* lib/securerandom.rb (SecureRandom.urlsafe_base64): delete padding.

Mon Mar  2 21:39:08 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/sockport.h (SS_LEN): defined unconditionally.

Mon Mar  2 21:26:42 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (anc_inspect_socket_creds): supress warnings.

Mon Mar  2 21:13:42 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (rsock_discard_cmsg_resource): defined
	  unconditionally.
